tests/rgs/syntax_errors/unclosed_parenthesis.rgs
ACTION run.
EVENT spotted ENVIRONMENT.
CONDITION is_tired MYSELF.
CONDITION is_armed MYSELF.
DURING ALWAYS:
    WHEN spotted ENVIRONMENT IF (is_tired MYSELF OR is_armed MYSELF:
        DO run.
